plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.plugin.compose'
    id 'com.mikepenz.aboutlibraries.plugin'
}

android {
    compileSdk = 37
    namespace = 'org.juanro.autumandu'

    defaultConfig {
        applicationId = "org.juanro.autumandu"
        minSdk = 26
        targetSdk = 37
        versionCode = 500
        versionName = "5.0.0"
        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"

        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled = true
            shrinkResources = true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'

            // No incluir metadatos de Git en el APK final
            vcsInfo {
                include = false
            }
        }
    }

    buildFeatures {
        buildConfig = true
        compose = true
        resValues = true
    }

    compileOptions {
        coreLibraryDesugaringEnabled = true
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    // JVM Toolchain para garantizar consistencia en cualquier entorno
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    lint {
        checkReleaseBuilds = false
        abortOnError = false
    }

    packaging {
        resources.excludes.addAll([
                'META-INF/DEPENDENCIES',
                'META-INF/NOTICE',
                'META-INF/LICENSE',
                'META-INF/LICENSE.txt',
                'META-INF/NOTICE.txt',
                'META-INF/ASL2.0',
                'META-INF/*.kotlin_module',
                'META-INF/AL2.0',
                'META-INF/LGPL2.1'
        ])
        // Asegura que las librerías nativas se empaqueten de forma determinista para F-Droid
        jniLibs.useLegacyPackaging = true
    }

    dependenciesInfo {
        // Disables dependency metadata when building APKs.
        includeInApk = false
        // Disables dependency metadata when building Android App Bundles.
        includeInBundle = false
    }
}

androidComponents {
    onVariants(selector().all()) { variant ->
        variant.outputs.each { output ->
            output.outputFileName.set("Autu-Mandu_${android.defaultConfig.versionName}.apk")
        }
    }
}

dependencies {
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'

    // --- AndroidX & Support ---
    implementation 'androidx.compose.ui:ui:1.11.2'
    implementation 'androidx.compose.material3:material3:1.4.0'
    implementation 'androidx.compose.material:material:1.11.2'
    implementation 'androidx.compose.ui:ui-tooling-preview:1.11.2'
    implementation 'androidx.activity:activity-compose:1.13.0'
    implementation 'org.jetbrains.kotlinx:kotlinx-collections-immutable:0.4.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.recyclerview:recyclerview-selection:1.2.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.fragment:fragment:1.8.9'
    implementation 'androidx.documentfile:documentfile:1.1.0'
    implementation 'androidx.work:work-runtime:2.11.2'
    implementation 'androidx.preference:preference:1.2.1'

    // --- UI & Material Design ---
    implementation 'com.google.android.material:material:1.14.0'

    // --- Data & Persistence ---
    implementation 'androidx.room:room-runtime:2.8.4'
    annotationProcessor 'androidx.room:room-compiler:2.8.4'

    // --- Utils & Network ---
    implementation 'com.squareup.okhttp3:okhttp:5.3.2'
    implementation 'org.apache.commons:commons-csv:1.14.1'

    // --- External Charts & UI ---
    implementation 'com.kubit-lab:charts:0.2.1'
    implementation 'com.mikepenz:aboutlibraries-core:14.2.0'
    implementation 'com.mikepenz:aboutlibraries:14.2.0'

    // --- Testing ---
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:5.23.0'
    testImplementation 'androidx.arch.core:core-testing:2.2.0'
    androidTestImplementation 'androidx.test:runner:1.7.0'
    androidTestImplementation 'androidx.test:core:1.7.0'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
}
